# code-compression-bench

./: .env.example  .gitignore  FACT-VS-FICTION.md  Makefile  README.md  _woz_live_capture.txt  pyproject.toml  tasks.json  tasks_bloated50.json
arms/: README.md  __init__.py  bear.py  caveman.py  compresr.py  dasein.py  edgee.py  headroom.py  rtk.py  woz.py
bench/: __init__.py  arm.py  cc_runner.py  figures.py  gateway_server.py  grader.py  mcp_client.py  prepare_repos.py  pricing.py  report.py  runner.py  schema.py  style.py  usage_gateway.py
results/2026-06-24/: README.md  build_figures.py  dashboard.html  fact-vs-fiction.md  paired.csv  summary.json  summary_rich.json
results/2026-07-04/: README.md  build_dashboard.py  build_figures.py  dashboard.html  paired.csv  summary.json  summary_rich.json
selfhost/: cc_setup.sh  docker-compose.yml
selfhost/edgee/: README.md  anthropic_upstream.patch  build.sh  forward_body_buffer.patch  launch.sh  smoke.py
selfhost/rtk/: README.md  install.sh
tests/: mock_mcp_server.py  test_cc_runner_shared_gateway.py  test_compresr_arm.py  test_dasein_arm.py  test_edgee_arm.py  test_gateway_server.py  test_harness_hooks.py  test_headroom_arm.py  test_mcp_client.py  test_rtk_arm.py  test_usage_gateway.py  test_woz_arm.py
