[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-compression-bench"
version = "0.1.0"
description = "A clean-room industry benchmark for LLM prompt-compression layers on coding agents."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Dasein Labs", email = "hello@daseinlabs.ai" }]

# Keep deps light. pandas is optional (report works on stdlib csv).
dependencies = [
    "litellm>=1.50",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
analysis = ["pandas>=2.2"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://daseinlabs.ai"

[tool.setuptools]
packages = ["bench", "arms"]

[tool.ruff]
line-length = 100
target-version = "py313"
